--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "tw-merge": "^0.0.1-alpha.3"
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
